--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Homework4</title>
+    <title>Homework5</title>
   </head>
   <body>
     <!-- Шапка сторінки -->
@@ -33,7 +33,7 @@
               <a class="nav-link" href="./index.html">Studio</a>
             </li>
             <li>
-              <a class="nav-link active" href="./portfolio.html">Portfolio</a>
+              <a class="nav-link active current" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
               <a class="nav-link" href="#">Contacts</a>
@@ -73,12 +73,17 @@
           <ul class="card-set">
             <li class="card-item">
               <a class="card-item-link" href="./portfolio.html">
-                <img
-                  src="./images/imghmw21.jpg"
-                  alt="Bank's app"
-                  width="360"
-                  height="300"
-                />
+                <div class="wrapper">
+                  <img
+                    src="./images/imghmw21.jpg"
+                    alt="Bank's app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h3 class="project-title">Banking App Interface Concept</h3>
                   <p class="project-name">App</p>
@@ -87,12 +92,17 @@
             </li>
             <li class="card-item">
               <a class="card-item-link" href="./portfolio.html">
-                <img
-                  src="./images/imghmw22.jpg"
-                  alt="Scanning process"
-                  width="360"
-                  height="300"
-                />
+                <div class="wrapper">
+                  <img
+                    src="./images/imghmw22.jpg"
+                    alt="Bank's app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h3 class="project-title">Cashless Payment</h3>
                   <p class="project-name">Marketing</p>
@@ -101,12 +111,17 @@
             </li>
             <li class="card-item">
               <a class="card-item-link" href="./portfolio.html">
-                <img
-                  src="./images/imghmw23.jpg"
-                  alt="Laptop and Phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="wrapper">
+                  <img
+                    src="./images/imghmw23.jpg"
+                    alt="Bank's app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h3 class="project-title">Meditation App</h3>
                   <p class="project-name">App</p>
@@ -115,12 +130,17 @@
             </li>
             <li class="card-item">
               <a class="card-item-link" href="./portfolio.html">
-                <img
-                  src="./images/imghmw24.jpg"
-                  alt="Taxi driver"
-                  width="360"
-                  height="300"
-                />
+                <div class="wrapper">
+                  <img
+                    src="./images/imghmw24.jpg"
+                    alt="Bank's app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h3 class="project-title">Taxi Service</h3>
                   <p class="project-name">Marketing</p>
@@ -129,12 +149,17 @@
             </li>
             <li class="card-item">
               <a class="card-item-link" href="./portfolio.html">
-                <img
-                  src="./images/imghmw25.jpg"
-                  alt="Smartphone screenshot"
-                  width="360"
-                  height="300"
-                />
+                <div class="wrapper">
+                  <img
+                    src="./images/imghmw25.jpg"
+                    alt="Bank's app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h3 class="project-title">Screen Illustrations</h3>
                   <p class="project-name">Design</p>
@@ -143,12 +168,17 @@
             </li>
             <li class="card-item">
               <a class="card-item-link" href="./portfolio.html">
-                <img
-                  src="./images/imghmw26.jpg"
-                  alt="Happy girl"
-                  width="360"
-                  height="300"
-                />
+                <div class="wrapper">
+                  <img
+                    src="./images/imghmw26.jpg"
+                    alt="Bank's app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h3 class="project-title">Online Courses</h3>
                   <p class="project-name">Marketing</p>
@@ -157,12 +187,17 @@
             </li>
             <li class="card-item">
               <a class="card-item-link" href="./portfolio.html">
-                <img
-                  src="./images/imghmw27.jpg"
-                  alt="Instagram stories"
-                  width="360"
-                  height="300"
-                />
+                <div class="wrapper">
+                  <img
+                    src="./images/imghmw27.jpg"
+                    alt="Bank's app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h3 class="project-title">Instagram Stories Concept</h3>
                   <p class="project-name">Design</p>
@@ -171,12 +206,17 @@
             </li>
             <li class="card-item">
               <a class="card-item-link" href="./portfolio.html">
-                <img
-                  src="./images/imghmw28.jpg"
-                  alt="bags of food"
-                  width="360"
-                  height="300"
-                />
+                <div class="wrapper">
+                  <img
+                    src="./images/imghmw28.jpg"
+                    alt="Bank's app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h3 class="project-title">Organic Food</h3>
                   <p class="project-name">Web Site</p>
@@ -185,12 +225,17 @@
             </li>
             <li class="card-item">
               <a class="card-item-link" href="./portfolio.html">
-                <img
-                  src="./images/imghmw29.jpg"
-                  alt="Coffee with milk"
-                  width="360"
-                  height="300"
-                />
+                <div class="wrapper">
+                  <img
+                    src="./images/imghmw29.jpg"
+                    alt="Bank's app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h3 class="project-title">Fresh Coffee</h3>
                   <p class="project-name">Web Site</p>
