--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Homework4</title>
+    <title>Homework5</title>
   </head>
   <body>
     <!-- Шапка сторінки -->
@@ -29,7 +29,7 @@
             ><span class="web">Web</span>Studio</a
           >
           <ul class="nav-list">
-            <li><a class="nav-link active" href="./index.html">Studio</a></li>
+            <li><a class="nav-link active current" href="./index.html">Studio</a></li>
             <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-link" href="#">Contacts</a></li>
           </ul>
@@ -58,7 +58,7 @@
         <div class="container">
           <div class="hero-content">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="hero-button">Order Service</button>
+            <button type="button" class="hero-button" data-modal-open>Order Service</button>
           </div>
         </div>
       </section>
@@ -429,5 +429,15 @@
         </ul>
       </section>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close class="modal-btn" type="button">
+          <svg width="8px" height="8px">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
